Bug 448106 - Google Groupware crashes
Summary: Google Groupware crashes
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: Google Resource (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: HI crash
Target Milestone: ---
Assignee: Carl Schwan
URL:
Keywords: drkonqi
: 444411 458302 461053 469093 469376 469601 470162 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-01-08 11:08 UTC by Peter Huyoff
Modified: 2023-05-28 21:22 UTC (History)
11 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.04.2
Sentry Crash Report:


Attachments
crash of today ;) (5.31 KB, text/vnd.kde.kcrash-report)
2022-01-09 09:43 UTC, Peter Huyoff
Details
KOrganizer crashes every time, i try o start it. (4.00 KB, text/vnd.kde.kcrash-report)
2022-12-02 10:25 UTC, Peter Huyoff
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Peter Huyoff 2022-01-08 11:08:41 UTC
Application: akonadi_google_resource (5.19.0 (21.12.0))

Qt Version: 5.15.2
Frameworks Version: 5.89.0
Operating System: Linux 5.15.12-1-default x86_64
Windowing System: X11
Distribution: "openSUSE Tumbleweed"
DrKonqi: 5.23.4 [KCrashBackend]

-- Information about the crash:
- What I was doing when the application crashed:
KOrganizer crashes everytime, when KDE comes up after booting. It looks, like it's related to one of the last three updates on tumleweed.

The crash can be reproduced every time.

-- Backtrace:
Application: Google Groupware (peter.huyoff@gmail.com) (akonadi_google_resource), signal: Aborted
Content of s_kcrashErrorMessage: std::unique_ptr<char []> = {get() = <optimized out>}
[KCrash Handler]
#6  __pthread_kill_implementation (threadid=<optimized out>, signo=signo@entry=6, no_tid=no_tid@entry=0) at pthread_kill.c:44
#7  0x00007f052e2f82d3 in __pthread_kill_internal (signo=6, threadid=<optimized out>) at pthread_kill.c:78
#8  0x00007f052e2a8356 in __GI_raise (sig=sig@entry=6) at ../sysdeps/posix/raise.c:26
#9  0x00007f052e2917d3 in __GI_abort () at abort.c:79
#10 0x00007f052e770fe7 in qt_message_fatal (message=<synthetic pointer>..., context=...) at global/qlogging.cpp:1914
#11 QMessageLogger::fatal(char const*, ...) const (this=this@entry=0x7ffe2bcaac38, msg=msg@entry=0x7f052ea72028 "ASSERT failure in %s: \"%s\", file %s, line %d") at global/qlogging.cpp:893
#12 0x00007f052e7704ca in qt_assert_x(char const*, char const*, char const*, int) (where=where@entry=0x7f05303375d0 "Akonadi::ResourceBase::retrieveItem()", what=what@entry=0x7f0530337500 "The base implementation of retrieveItem() must never be reached. You must implement either retrieveItem() or retrieveItems(Akonadi::Item::List, QSet<QByteArray>) overload to handle item retrieval requ"..., file=file@entry=0x7f05303374b0 "/home/abuild/rpmbuild/BUILD/akonadi-21.12.0/src/agentbase/resourcebase.cpp", line=line@entry=1457) at global/qglobal.cpp:3366
#13 0x00007f0530303e6e in Akonadi::ResourceBase::retrieveItem(Akonadi::Item const&, QSet<QByteArray> const&) (this=this@entry=0x7ffe2bcab310, item=<optimized out>, parts=...) at /usr/src/debug/akonadi-server-21.12.0-1.1.x86_64/src/agentbase/resourcebase.cpp:1452
#14 0x00007f053031d732 in Akonadi::ResourceBasePrivate::slotPrepareItemRetrievalResult(KJob*) (this=<optimized out>, job=<optimized out>) at /usr/src/debug/akonadi-server-21.12.0-1.1.x86_64/src/agentbase/resourcebase.cpp:1035
#15 0x00007f052e9c7393 in QtPrivate::QSlotObjectBase::call(QObject*, void**) (a=0x7ffe2bcaadb0, r=0x559644834730, this=0x55964492dc40) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:398
#16 doActivate<false>(QObject*, int, void**) (sender=0x55964493e330, signal_index=6, argv=0x7ffe2bcaadb0) at kernel/qobject.cpp:3886
#17 0x00007f052e9c085f in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) (sender=sender@entry=0x55964493e330, m=<optimized out>, local_signal_index=local_signal_index@entry=3, argv=argv@entry=0x7ffe2bcaadb0) at kernel/qobject.cpp:3946
#18 0x00007f052fd86ffc in KJob::result(KJob*, KJob::QPrivateSignal) (this=this@entry=0x55964493e330, _t1=<optimized out>, _t1@entry=0x55964493e330, _t2=...) at /usr/src/debug/kcoreaddons-5.89.0-1.2.x86_64/build/src/lib/KF5CoreAddons_autogen/include/moc_kjob.cpp:633
#19 0x00007f052fd8b39b in KJob::finishJob(bool) (this=0x55964493e330, emitResult=<optimized out>) at /usr/src/debug/kcoreaddons-5.89.0-1.2.x86_64/src/lib/jobs/kjob.cpp:98
#20 0x00007f052e9bd33e in QObject::event(QEvent*) (this=0x55964493e330, e=0x55964493feb0) at kernel/qobject.cpp:1314
#21 0x00007f052f5d3a7f in QApplicationPrivate::notify_helper(QObject*, QEvent*) (this=<optimized out>, receiver=0x55964493e330, e=0x55964493feb0) at kernel/qapplication.cpp:3632
#22 0x00007f052e990d2a in QCoreApplication::notifyInternal2(QObject*, QEvent*) (receiver=0x55964493e330, event=0x55964493feb0) at kernel/qcoreapplication.cpp:1064
#23 0x00007f052e993d77 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) (receiver=0x0, event_type=0, data=0x559644787250) at kernel/qcoreapplication.cpp:1821
#24 0x00007f052e9e8b83 in postEventSourceDispatch(GSource*, GSourceFunc, gpointer) (s=s@entry=0x55964485c4e0) at kernel/qeventdispatcher_glib.cpp:277
#25 0x00007f052c91dd9f in g_main_dispatch (context=0x7f0520005000) at ../glib/gmain.c:3381
#26 g_main_context_dispatch (context=0x7f0520005000) at ../glib/gmain.c:4099
#27 0x00007f052c91e128 in g_main_context_iterate (context=context@entry=0x7f0520005000, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4175
#28 0x00007f052c91e1df in g_main_context_iteration (context=0x7f0520005000, may_block=1) at ../glib/gmain.c:4240
#29 0x00007f052e9e8204 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) (this=0x55964485f460, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#30 0x00007f052e98f72b in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) (this=this@entry=0x7ffe2bcab1c0, flags=..., flags@entry=...) at ../../include/QtCore/../../src/corelib/global/qflags.h:69
#31 0x00007f052e997a10 in QCoreApplication::exec() () at ../../include/QtCore/../../src/corelib/global/qflags.h:121
#32 0x00007f052ee7519c in QGuiApplication::exec() () at kernel/qguiapplication.cpp:1867
#33 0x00007f052f5d39f5 in QApplication::exec() () at kernel/qapplication.cpp:2824
#34 0x00007f0530318955 in Akonadi::ResourceBase::init(Akonadi::ResourceBase&) (r=...) at /usr/src/debug/akonadi-server-21.12.0-1.1.x86_64/src/agentbase/resourcebase.cpp:555
#35 0x0000559643642a70 in Akonadi::ResourceBase::init<GoogleResource>(int, char**) (argv=<optimized out>, argc=<optimized out>) at /usr/include/KF5/AkonadiAgentBase/akonadi/resourcebase.h:183
#36 main(int, char**) (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/kdepim-runtime-21.12.0-1.1.x86_64/resources/google-groupware/googleresource.cpp:546
[Inferior 1 (process 2636) detached]

Possible duplicates by query: bug 419428, bug 347564.

Reported using DrKonqi
This report was filed against 'kde' because the product 'akonadi_google_resource' could not be located in Bugzilla. Add it to drkonqi's mappings file!
Comment 1 Peter Huyoff 2022-01-08 11:11:29 UTC
After restarting the service, google groupware runs without flaws!
Comment 2 Peter Huyoff 2022-01-09 09:43:38 UTC
Created attachment 145258 [details]
crash of today ;)

This is todays log...
Comment 3 Peter Huyoff 2022-12-02 10:25:15 UTC
Created attachment 154220 [details]
KOrganizer crashes every time, i try o start it.
Comment 4 Christophe Marin 2023-04-29 07:49:59 UTC
*** Bug 444411 has been marked as a duplicate of this bug. ***
Comment 5 Christophe Marin 2023-04-29 07:50:05 UTC
*** Bug 469093 has been marked as a duplicate of this bug. ***
Comment 6 Nicolas Fella 2023-05-17 10:39:26 UTC
*** Bug 469601 has been marked as a duplicate of this bug. ***
Comment 7 Nicolas Fella 2023-05-17 10:39:38 UTC
*** Bug 469376 has been marked as a duplicate of this bug. ***
Comment 8 Nicolas Fella 2023-05-17 10:39:51 UTC
*** Bug 461053 has been marked as a duplicate of this bug. ***
Comment 9 Nicolas Fella 2023-05-17 10:40:02 UTC
*** Bug 458302 has been marked as a duplicate of this bug. ***
Comment 10 Nicolas Fella 2023-05-23 12:56:26 UTC
*** Bug 470162 has been marked as a duplicate of this bug. ***
Comment 11 Bug Janitor Service 2023-05-25 09:04:54 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/119
Comment 12 Carl Schwan 2023-05-25 09:05:39 UTC
I'm unfortunately unable to reproduce this crash when trying to use google resources for a few weeks :(

But the fact that the retrieveItems is missing is incorrect, so I created a patch yesterday for that https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/119

Would be great if someone could test it ;)
Comment 13 Carl Schwan 2023-05-28 21:19:25 UTC
Git commit e3e953571072b251c8531b18b07d46c6d52230f3 by Carl Schwan.
Committed on 28/05/2023 at 21:18.
Pushed by carlschwan into branch 'master'.

Implement retrieveItems(Item::List) for googleresource

This is a required method to reimplement in a resource, otherwise in
some situations this will crash.

M  +29   -0    resources/google-groupware/googleresource.cpp
M  +1    -0    resources/google-groupware/googleresource.h

https://invent.kde.org/pim/kdepim-runtime/-/commit/e3e953571072b251c8531b18b07d46c6d52230f3
Comment 14 Carl Schwan 2023-05-28 21:20:41 UTC
Git commit 6bffef37350b7bcacaa2763ab8df5a462eb3f8b7 by Carl Schwan.
Committed on 28/05/2023 at 21:20.
Pushed by carlschwan into branch 'release/23.04'.

Implement retrieveItems(Item::List) for googleresource

This is a required method to reimplement in a resource, otherwise in
some situations this will crash.


(cherry picked from commit e3e953571072b251c8531b18b07d46c6d52230f3)

M  +29   -0    resources/google-groupware/googleresource.cpp
M  +1    -0    resources/google-groupware/googleresource.h

https://invent.kde.org/pim/kdepim-runtime/-/commit/6bffef37350b7bcacaa2763ab8df5a462eb3f8b7