Implement retrieveItems(Item::List) for googleresource

This is a required method to reimplement in a resource, otherwise in
some situations this will crash.

BUG: 448106


(cherry picked from commit e3e953571072b251c8531b18b07d46c6d52230f3)